Fix layout issues with test checking class names and ids

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ html {
   flex-direction: column;
 }
 
-.drum-pad, #display {
+.drum-pad-outer, #display {
   border: .4rem solid black;
   border-radius: .5rem;
   margin: 1rem;
